:fire: [#65] remove OE m2m from medewerker
